# simple3drenderer

./: .gitignore  CMakeLists.txt  README.md
Application/res/3dModels/hammer/: hammer.mtl
Application/res/3dModels/transparency/: transparent.blend  transparent.mtl
Application/res/shaders/: cube_final2.frag  cube_final2.vert  point_shadows_depth.frag  point_shadows_depth.geom  point_shadows_depth.vert  skybox.frag  skybox.vert
Application/src/: application.cpp
Application/src/include/: Shader.h  Texture.h  Vertexarray.h  buffer.h  callback.h  camera.h  core.h  drawable.h  material.h  maths.h  model.h  node.h  pointLight.h  renderer.h  scene.h  shapes.h  skybox.h
